--- a/modulo-framework/ecommerce/package.json
+++ b/modulo-framework/ecommerce/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.11.0",
     "bootstrap": "^5.3.7",
+    "font-awesome": "^4.7.0",
     "react": "^19.1.1",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.1",
